# AdventOfCode

./: .gitignore  Notes for 2023.md  README.md
2015-Paul/: package.json
2015-Paul/01/: 1.js  2.js  package.json  test.txt
2015-Paul/02/: 1.js  2.js  package.json  test.txt
2015-Paul/03/: 1.js  2.js  package.json
2015-Sam-Rust/: Cargo.toml
2015-Sam-Rust/src/: main.rs
2020-Paul/: package.json
2020-Paul/1-1/: index.js  package.json
2020-Paul/1-2/: index.js  package.json
2020-Paul/10-1/: index.js  package.json
2020-Paul/10-2/: index.js  package.json
2020-Paul/11-1/: index.js  package.json
2020-Paul/11-2/: index.js
2020-Paul/12-1/: index.js  package.json
2020-Paul/12-2/: index.js
2020-Paul/13-1/: index.js  package.json
2020-Paul/13-2/: index.js
2020-Paul/14-1/: index.js
2020-Paul/14-2/: index.js  package.json
2020-Sam/: package.json
2021-Paul/: package.json  pnpm-lock.yaml
2021-Sam/: package.json  pnpm-lock.yaml  tsconfig.json
2022-Paul/: .eslintrc.js  Notes.md  README.md  package.json  start.js  tsconfig.eslint.json
2022-Sam/: .eslintrc.js  .prettierrc  README.md  go.ts  package.json  runAll.ts  runHelpers.ts  start.js  test.js
2022-Sam-Fortran/: CMakeLists.txt  day1.f90
2023-Paul/: .editorconfig  .gitignore  go.ts  package.json  runAll.ts  runHelpers.ts  tsconfig.json
2023-Sam/: .eslintrc.cjs  .gitignore  README.md  go.ts  package.json  runAll.ts  runHelpers.ts  tsconfig.json
2023-Sam/rust/days/1/: Cargo.toml  pt1.rs  pt1b.rs  pt2.rs  pt2b.rs  pt2c.rs  pt2d.rs
2023-Sam/rust/days/2/: Cargo.toml  pt1.rs  pt2.rs
(+773 files in other folders)
