[package]
name = "day2"
version = "0.1.0"
edition = "2021"

[dependencies]
aocutils = { path = "../../utils" }
regex-automata = { version = "0.4.3", features = [] }
onig = { version = "6.4.0", default-features = false }

[dependencies.regex]
version = "1.10.2"
default-features = false
features = ["std"]

[[bin]]
name = "pt1"
path = "pt1.rs"

[[bin]]
name = "pt2"
path = "pt2.rs"
